Fixed spacing on post.php

--- a/css/postpage.css
+++ b/css/postpage.css
@@ -7,6 +7,6 @@
     background-color: red;
     border-color: red;
 }
-.post-container{
-
+.main-content{
+    justify-content: flex-start;
 }
